src/module/components/Research.css
#cards {
	height: 370px;
	width: 220px;
	margin: 30px 20px 20px 0;
	float: left;
}

img {
	height: 250px;
	width: 200px;
}

.card-body {
	text-align: center;
}

#button {
	margin-top: 7px;
}

#card-text {
	font-size: 14px;
}

h2 {
	color: #F0AA11;
	text-align: center;
	margin-top: 20px;
	font-weight: bold;
}

.search-div {
	text-align: center;
	float: right;
}

.search-div button {
	font-weight: bold;
	border: none;
	margin-top: 20px;
	margin-bottom: 20px;
	margin-left: 10px;
}

.btn-group {
	  margin-top: 30px;
}

.left-div {
	text-align: left;
}

::marker {
	font-size: 24px;
}

.dropdown-item:active {
	background-color: #F0AA11;
}

.dropdown-item:hover {
	background-color: #F0AA11;
}

  .search-items {
	  color: white;
	  font-weight: bolder;
	  margin-right: 30px;
	  font-size: 18px;
  }

  .div-right {
	  text-align: right;
  }

  .div-right button {
	  width: 120px;
  }

@media (min-width: 2700px) {
	#cards {
		margin: 30px 20px 20px 0;
	}
	
}

@media (min-width: 2500px) {
	#cards {
		margin: 30px 20px 20px 0;
	}
	.div-right button {
		width: 300px;
	}
}

@media (min-width: 2309px) {
	#cards {
		margin: 30px 20px 20px 0;
	}
	.div-right button {
		width: 300px;
	}
}


@media (min-width: 2000px) {
	#cards {
		margin: 30px 20px 20px 0;
	}

	.div-right button {
		width: 300px;
	}
}

@media (min-width: 1789px) {
	#cards {
		margin: 30px 20px 20px 0;
	}
	.div-right button {
		width: 300px;
	}
}

@media (max-width: 1709px) {
	#cards {
		margin: 30px 20px 20px 0;
	}
}

@media (max-width: 1480px) {
	#cards {
		margin: 30px 20px 20px 0;
	}
}


@media (max-width: 1329px) {
	#cards {
		margin-left: 30px;
	}
}

@media (max-width: 1130px) {
	#cards {
		margin-left: 30px;
	}
}

@media (max-width: 992px) {
	#cards {
		margin-left: 20px;
	}
}

@media (max-width: 786px) {
	#cards {
		margin-left: 20px;
	}
	.div-right button {
		width: 80px;
	}
	.search-items {
		margin-right: 10px;
		font-size: 16px;
	}
}

@media (max-width: 639px) {
	#cards {
		margin-left: 20px;
	}
	.div-right button {
		width: 80px;
	}
	.search-items {
		margin-right: 10px;
		font-size: 16px;
	}
}


@media (max-width: 570px) {
	#cards {
		margin-left: 20px;
	}
}

@media (max-width: 400px) {
}

@media (max-width: 290px) {
}

